prevent navbar nav from overlapping navbar toggle
BS3 commit c3ac95333d3c8746e8877ff02cafc41c4a692414

--- a/less/masthead.less
+++ b/less/masthead.less
@@ -73,7 +73,6 @@
     // When there is no `.navbar-brand` present (which normally sits between the
     // navbar brand and toggle), prevent the nav from overlapping the toggle.
     .navbar-toggle + & {
-      width: 100%;
       margin-top: @navbar-masthead-height;
     }
   }
