--- a/less/toolbar.less
+++ b/less/toolbar.less
@@ -112,7 +112,6 @@
     // When there is no `.navbar-brand` present (which normally sits between the
     // navbar brand and toggle), prevent the nav from overlapping the toggle.
     .navbar-toggle + & {
-      width: 100%;
       margin-top: @navbar-toolbar-height;
     }
   }
